# darwin

./: .pre-commit-config.yaml  GEMINI.md  pyproject.toml
src/darwin/: __init__.py  creature.py  environment.py  evolution.py  genome.py
tests/: test_creature.py  test_environment.py  test_evolution.py  test_genome.py
