[project]
name = "darwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "ryanfolds6@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
